--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 "name": "Queen-Alexa",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/HYPER-MOD/Queen-Alexa",
+  "repository": "https://github.com/Itz-me-kunji/Queen-Alexa/edit/main/README.md",
   "logo": "https://www.linkpicture.com/q/HYPER-MOD-LOGO.jpg",
   "keywords": ["bot", "whatsapp", "whatsapp-bot"],
 
